fixed styling for news section to get them all single file on mobile

--- a/src/assets/styles/_interesting-news.scss
+++ b/src/assets/styles/_interesting-news.scss
@@ -19,3 +19,9 @@
         }
     }
 }
+
+@media screen and (max-width: 450px) {
+    .news-section ul a {
+        width: 100% !important;
+    }           
+}
